Merged files together