@@ -22,9 +22,10 @@
   </repositories>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
     <dependency>
       <groupId>org.openjfx</groupId>
-      <artifactId>javafx-controls</artifactId>
+      <artifactId>javafx-base</artifactId>
       <version>19</version>
     </dependency>
 
@@ -34,14 +35,27 @@
       <artifactId>mapjfx</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.7</version>
+      <scope>test</scope>
+    </dependency>
 
-
+    <!-- Test scope -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.1</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
       <version>18-ea+11</version>
     </dependency>
-            <dependency>
+    <dependency>
       <groupId>org.controlsfx</groupId>
       <artifactId>controlsfx</artifactId>
       <version>11.1.2</version>
@@ -59,48 +73,66 @@
       <version>1.3.2</version>
       <type>pom</type>
     </dependency>
-      <dependency>
-          <groupId>com.opencsv</groupId>
-          <artifactId>opencsv</artifactId>
-          <version>5.7.1</version>
-      </dependency>
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.7.1</version>
+    </dependency>
   </dependencies>
 
   <build>
-        <plugins>
-          <plugin>
+    <plugins>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <release>17</release>
         </configuration>
-            </plugin>
+      </plugin>
       <plugin>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.8</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <version>2.0.0</version>
         <executions>
           <execution>
-            <!-- Default configuration for running with: mvn clean javafx:run -->
-            <id>default-cli</id>
-            <configuration>
-              <mainClass>com.example.demo/com.example.demo.HikingJournal</mainClass>
-              <options>
-                <option>--add-exports</option>
-                <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
-              </options>
-              <launcher>app</launcher>
-              <jlinkZipName>app</jlinkZipName>
-              <jlinkImageName>app</jlinkImageName>
-              <noManPages>true</noManPages>
-              <stripDebug>true</stripDebug>
-              <noHeaderFiles>true</noHeaderFiles>
-            </configuration>
+            <phase>package</phase>
+            <goals>
+              <goal>create-repository</goal>
+              <goal>assemble</goal>
+            </goals>
           </execution>
         </executions>
+        <configuration>
+          <assembleDirectory>${project.build.directory}/${appassembler.directory}</assembleDirectory>
+
+          <copyConfigurationDirectory>true</copyConfigurationDirectory>
+          <filterConfigurationDirectory>true</filterConfigurationDirectory>
+          <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+
+          <repositoryLayout>flat</repositoryLayout>
+          <repositoryName>lib</repositoryName>
+          <useAllProjectDependencies>false</useAllProjectDependencies>
+
+          <programs>
+            <program>
+              <id>Hiking-Journal</id>
+              <mainClass>com.example.demo.HikingJournal</mainClass>
+            </program>
+          </programs>
+        </configuration>
       </plugin>
-          </plugins>
+    </plugins>
   </build>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snaphost</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+    </repository>
+  </distributionManagement>
 </project>
